-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
conf-sanity test_82a fails on review-dne-part-1 with ‘/usr/bin/lfs setstripe -o 22456,27728,65534 -i 65534 /mnt/lustre/d82a.conf-sanity/f82a.conf-sanity-3 failed‘
From the test log:
/usr/bin/lfs setstripe -o 22456,27728,65534 -i 65534 /mnt/lustre/d82a.conf-sanity/f82a.conf-sanity-3 error: bad stripe offset 65534: Invalid argument (22) error: setstripe: create stripe file '/mnt/lustre/d82a.conf-sanity/f82a.conf-sanity-3' failed conf-sanity test_82a: @@@@@@ FAIL: /usr/bin/lfs setstripe -o 22456,27728,65534 -i 65534 /mnt/lustre/d82a.conf-sanity/f82a.conf-sanity-3 failed
Could the index just be too large for input to '-i' the start OST index?
Test failure at https://testing.hpdd.intel.com/test_sets/da5f5fbe-1010-11e5-a2d3-5254006e85c2